# chemistry-admin

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: 30点位例子.txt  admin-only-repository.md  application-engineering-structure.md  backend-slim-architecture.md  catalog-tree-architecture.md  local_video_processing.md  production-operations.md  productionization-final-notes.md  student-product-learning-model.md  实验目录_整理版.md
scripts/: apply_migrations.py  bootstrap_admin.py  bootstrap_production_seed.py  cleanup_legacy_artifacts.py  deploy_compose_stack.py  generate_catalog_node_default_evidence.py  generate_experiment_catalog_seed.py  generate_point_question_bank_seed.py  generate_video_point_default_evidence.py  import_canonical_evidence.py  import_experiment_catalog_seed.py  import_experiment_knowledge_framework.py  import_experiment_question_bank.py  import_manual_reviewed_point_evidence.py  import_precomputed_textbook_rag.py  media_lifecycle_cleanup.py  point_aware_question_bank.py  publish_reviewed_curriculum.py  rebuild_video_library_index.py  seed_catalog_point_evidence.py  seed_current_question_bank.py  seed_demo_identities.py  seed_experiment_videos.py  seed_formal_experiments.py  seed_full_catalog_point_content.py  validate_backend_architecture.py  validate_complete_seed_bootstrap.py  validate_compose_stack.py  validate_experiment_catalog_seed.py  validate_experiment_points.py  validate_production_readiness.py  validate_production_resources.py  validate_video_library_search.py  (+2 more)
server/: Dockerfile  (+4 more)
(+1122 files in other folders)
